# a2_cw

./: .gitignore  README.md  environment.yml  pyproject.toml
a2cw/: __init__.py  classification.py  denoising.py  reconstruction.py  segmentation.py
main/: run_module1.ipynb  run_module3.ipynb
